@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/boost
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/boost/ChangeLog,v 1.133 2008/02/05 15:42:08 drac Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/boost/ChangeLog,v 1.134 2008/04/24 15:01:21 dev-zero Exp $
+
+*boost-1.35.0 (24 Apr 2008)
+
+  24 Apr 2008; Tiziano Müller <dev-zero@gentoo.org> +boost-1.35.0.ebuild:
+  Version bump (but not finished yet).
 
   05 Feb 2008; Samuli Suominen <drac@gentoo.org> boost-1.34.1-r2.ebuild:
   amd64 stable wrt security #205955
